feat: implement auth (#22)
* chore: add connect rpc node modules

* docs: add link to blueprint repo to readme

* chore: set up dockerfile for dashboard

* chore: add run configs for dashboard docker

* fix: nginx config

* feat: makefile dashboard docker commands

* fix: daemon and backend logs now work in docker

* chore: set up a GitHub actions workflow for building and publishing docker images

* feat: sign up page

Authored-by: Wh4I3-2 <154924333+Wh4I3-2@users.noreply.github.com>

* feat: sign up page

* chore: formatter

* feat: change auth ui login/register switch animation

* fix: oops

* feat: auth page styling

* fix: wrong docker compose backend port

* feat: add support for frontend config

* feat: set up frontend auth service client

* fix: ignore specific methods in auth middleware

* feat: implement auth

* docs: install guide

* refactor: input color and auth page animation

* refactor: make api client lib more generic

* feat: add client service

* refactor: change client service proto to not include daemon stuff

* feat: add client service and daemon server service api clients

* refactor: make sessioninfo a pointer

* feat: add daemon port and https bool to node db model

* refactor: change import

* refactor: add blueprint to server db model

* refactor: remove player display from server card for now and add storage usage

* fix: user input validation on login and register

* refactor: remove dashboard overview for now

* feat: client service handler

* chore: remove intellij runs that we no longer need with docker compose

* fix: make cookies actually work

* feat: load user data

* fix: dafuq?

* feat: add logout

* fix: stop react complaining about keys

* fix: logout

* docs: todo

* feat: add softwareIcon and resourceLimit to ServerInfo

* chore: change prettier settings

* feat: integrate server data fetching and refactor server card stuff

* feat: add location to server info

* fix: random refactoring errors

* refactor: remove client stre
